# qq-maid-bot

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile  README-dev.md  README.md  compose.yaml
.github/workflows/: ci.yml  docker.yml  release.yml
docment/: large_file_audit_report.md  onebot11_connect_prd.md
docs/: DEVELOPMENT.md
docs/tasks/: message-concurrency-scheduling.md
docs/tasks/done/: add-scope-to-memory-fix-leakage.md  gateway-core-inprocess-call-analysis-report.md  gateway-core-inprocess-streaming-phase1-completion-report.md.md  qq-openid-identity-check.md  (+2 more)
prd/: 12306_done.md  large_file_audit_report.md  llm_rag_v1.md  one_file.md  onebot11_connect_prd.md  qq_group_prd.md
qq-maid-common/: Cargo.toml
qq-maid-common/src/: lib.rs  redaction.rs  text.rs  time_context.rs
qq-maid-core/: Cargo.toml  README.md
qq-maid-core/src/: config.rs  error.rs  lib.rs  service.rs
qq-maid-core/src/app/: mod.rs
qq-maid-core/src/http/: mod.rs  routes.rs
qq-maid-core/src/provider/: mod.rs  types.rs
qq-maid-core/src/runtime/: mod.rs  push.rs  respond.rs  todo_reminder.rs
qq-maid-core/src/runtime/knowledge/: chunking.rs  mod.rs
qq-maid-core/src/runtime/pending/: mod.rs
qq-maid-core/src/runtime/prompt/: mod.rs  prompt_files.rs
qq-maid-core/src/runtime/query/: mod.rs
qq-maid-core/src/runtime/respond/: chat_flow.rs  common.rs  help.rs  llm_service.rs  memory_flow.rs  search_flow.rs  train_flow.rs  types.rs
qq-maid-core/src/runtime/respond/tests/: chat.rs  memory.rs  search.rs  session.rs  support.rs  train.rs
qq-maid-core/src/runtime/rss/: feed.rs  scheduler.rs
qq-maid-core/src/runtime/train/: mod.rs
qq-maid-core/src/storage/: database.rs  knowledge.rs  memory.rs  migrations.rs  mod.rs  rss.rs  session.rs  todo.rs
qq-maid-core/src/util/: metrics.rs  mod.rs
qq-maid-gateway-rs/: Cargo.toml  README.md
qq-maid-gateway-rs/src/: api.rs  render.rs  respond.rs
qq-maid-gateway-rs/src/app/: mod.rs
qq-maid-gateway-rs/src/config/: mod.rs
qq-maid-gateway-rs/src/gateway/: event.rs  group_filter.rs  logging.rs  mod.rs  ping.rs  push.rs
qq-maid-gateway-rs/src/gateway/ping/: healthz.rs  mod.rs  render.rs  tests.rs
qq-maid-llm/: Cargo.toml  README.md
qq-maid-llm/src/: config.rs  error.rs  lib.rs  metrics.rs  service.rs  sse.rs  web_search.rs
qq-maid-llm/src/app/: mod.rs
qq-maid-llm/src/http/: routes.rs
qq-maid-llm/src/provider/: bigmodel.rs  deepseek.rs  mod.rs  status.rs  types.rs
qq-maid-llm/src/provider/openai/: chat.rs  extract.rs  fallback.rs  mod.rs  payload.rs  responses.rs  stream.rs  transport.rs
qq-maid-llm/src/runtime/: mod.rs  respond.rs  translation.rs
qq-maid-llm/src/runtime/query/: mod.rs
qq-maid-llm/src/runtime/respond/: command_render.rs  common.rs  help.rs  llm_service.rs  memory_flow.rs  pending.rs  rss_flow.rs  search_flow.rs  session_flow.rs  translation_flow.rs  types.rs  weather_flow.rs
qq-maid-llm/src/runtime/respond/tests/: chat.rs  memory.rs  rss.rs  search.rs  session.rs  support.rs  translation.rs  weather.rs
qq-maid-llm/src/runtime/respond/todo_flow/: format.rs  mod.rs  pending.rs
qq-maid-llm/src/runtime/rss/: feed.rs  scheduler.rs
qq-maid-llm/src/storage/: migrations.rs  rss.rs
qq-maid-llm/src/util/: time_context.rs
runtime/: .env.example  README.md  botctl.sh  validate-runtime.sh
runtime/config/: .env.example  member_id_mapping.example.json
runtime/static/: index.html
scripts/: deploy-local.sh  deploy-remote.sh  deploy.sh  diagnose-network.sh  llmctl.sh  package-release.sh  validate-release-runtime.sh  validate-runtime.sh
src/: main.rs
tasks/: configurable-context-modules.md  llm-pipeline-v2.md  opencode-go-add.md
tasks/done/: qq-group.md  rag-v1.md
(+2 files in other folders)
