[package]
name = "qq-maid-gateway-rs"
version = "0.1.2"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
axum = "0.8"
dotenvy = "0.15"
futures-util = "0.3"
qq-maid-common = { path = "../qq-maid-common" }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
time = { version = "0.3", features = ["macros"] }
