# qq-maid-llm 项目清单 —— 只承载模型调用、Provider 路由和 Web Search 协议能力。
[package]
name = "qq-maid-llm"
version = "0.1.3"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
futures = "0.3"
qq-maid-common = { path = "../qq-maid-common" }
reqwest = { version = "0.13", default-features = false, features = ["gzip", "json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["full"] }
